Removed package specific cruft
prevented clean deployment without removing annotations

--- a/src/classes/RecordTypeDescribe.cls
+++ b/src/classes/RecordTypeDescribe.cls
@@ -2,11 +2,11 @@
  * Simple wrapper class to represent a record type sObject and RecordTypeInfo object all in one.
  * This object needs to be used in any ui-facing record type operations going forward 
  * in order to support record type label overrides. See: http://www.ca-peterson.com/2011/10/tales-of-isv-supporting-override-labels.html
- * @author cpeterson
+ * @author chris@ca-peterson.com
  **/
  
  //TODO: support description overrides
-global with sharing class RecordTypeDescribe {
+public with sharing class RecordTypeDescribe {
 	private static Map<String,Map<id,RecordTypeDescribe>> cache {
 		get{
 			if(cache == null)
@@ -24,22 +24,22 @@ global with sharing class RecordTypeDescribe {
 		set;
 	}
 	
-	global Id recordTypeId {get; set;}
-	global String internalLabel {get; set;}
-	global String label {get; set;}
-	global String developerName {get; set;}
-	global String namespacePrefix {get; set;}
-	global String description {get; set;}
-	global String sObjectType {get; set;}
-	global boolean isActive {get; set;}
-	global boolean isDefault {get; set;}
+	public Id recordTypeId {get; set;}
+	public String internalLabel {get; set;}
+	public String label {get; set;}
+	public String developerName {get; set;}
+	public String namespacePrefix {get; set;}
+	public String description {get; set;}
+	public String sObjectType {get; set;}
+	public boolean isActive {get; set;}
+	public boolean isDefault {get; set;}
 	private boolean isAvailable;
 	
-	global RecordTypeDescribe(RecordType rt, Schema.RecordTypeInfo rti){
+	public RecordTypeDescribe(RecordType rt, Schema.RecordTypeInfo rti){
 		if(rti == null)
-			throw new Exceptions.ArgumentException('Second (Schema.RecordTypeInfo parameter) may not be null.');
+			throw new ArgumentException('Second (Schema.RecordTypeInfo parameter) may not be null.');
 		if(rt.id != rti.getRecordTypeId())
-			throw new Exceptions.ArgumentException('Arguments must be for the same record type.');
+			throw new ArgumentException('Arguments must be for the same record type.');
 		recordTypeId = rti.getRecordTypeId();
 		internalLabel = rt.name;
 		label = rti.getName();
@@ -52,17 +52,12 @@ global with sharing class RecordTypeDescribe {
 		isDefault = rti.isDefaultRecordTypeMapping();
 	}
 	
-	@deprecated
-	global RecordTypeDescribe(Schema.RecordTypeInfo rti){
-		System.assert(false,'This method should not be called directly.');
-	}
-	
 	//returns true if the current user can create new record with this record type
-	global boolean getIsAvailable(){
+	public boolean getIsAvailable(){
 		return isAvailable;
 	}
 	
-	global static RecordTypeDescribe getDefault(Schema.sObjectType objType){
+	public static RecordTypeDescribe getDefault(Schema.sObjectType objType){
 		String objName = objType.getDescribe().getName().toLowerCase();
 		if(!cache.containsKey(objName))
 			fillCache(objType);
@@ -70,7 +65,7 @@ global with sharing class RecordTypeDescribe {
 	}
 
 	//TODO: refactor common code out of this and getAvailable
-	global static Map<id,RecordTypeDescribe> getActive(Schema.sObjectType objType){
+	public static Map<id,RecordTypeDescribe> getActive(Schema.sObjectType objType){
 		Map<id,RecordTypeDescribe> result = new Map<id,RecordTypeDescribe>();
 		String objName = objType.getDescribe().getName().toLowerCase();
 		if(!cache.containsKey(objName))
@@ -81,7 +76,7 @@ global with sharing class RecordTypeDescribe {
 		}
 		return result;
 	}
-	global static Map<id,RecordTypeDescribe> getAvailable(Schema.sObjectType objType){
+	public static Map<id,RecordTypeDescribe> getAvailable(Schema.sObjectType objType){
 		Map<id,RecordTypeDescribe> result = new Map<id,RecordTypeDescribe>();
 		String objName = objType.getDescribe().getName().toLowerCase();
 		if(!cache.containsKey(objName))
@@ -93,7 +88,7 @@ global with sharing class RecordTypeDescribe {
 		return result;
 	}
 	
-	global static Map<id,RecordTypeDescribe> getAll(Schema.sObjectType objType){
+	public static Map<id,RecordTypeDescribe> getAll(Schema.sObjectType objType){
 		String objName = objType.getDescribe().getName().toLowerCase();
 		if(!cache.containsKey(objName))
 			fillCache(objType);
@@ -115,4 +110,6 @@ global with sharing class RecordTypeDescribe {
 		}
 		cache.put(objName,result);
 	}
+
+	public class ArgumentException extends Exception{}
 }
