Tests, new method to flush internal cache
New method useful for heap-constrained environments.

--- a/src/classes/SObjectDescribe.cls
+++ b/src/classes/SObjectDescribe.cls
@@ -85,6 +85,12 @@ public with sharing class SObjectDescribe {
 	public static Map<String,SObjectType> getRawGlobalDescribe(){
 		return rawGlobalDescribe;
 	}
+	//Useful when working in heap space constrained environments. 
+	//Existing references to SObjectDescribe instances will continue to work.
+	public static void flushCache(){
+		rawGlobalDescribe = null;
+		globalDescribe = null;
+	}
 
-	public class DuplicateDescribeException extends Exception{}
+	public class DuplicateDescribeException extends Exception{} //Test coverage for this requires APIv28's @testVisbile annotation to force exception cases.
 }
